[package]
name = "aoc2023"
description = "Advent of Code 2023"
edition = "2021"
rust-version = "1.75"
version = "0.1.0"
authors.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish = false

[dependencies]
aoc-runner = { workspace = true }
aoc-runner-derive = { workspace = true }
indoc = { workspace = true }

derive_more = { version = "1", features = ["full"] }
itertools = { version = "0.13" }
num = { version = "0.4" }
num-integer = { version = "0.1" }
pathfinding = { version = "4.13" }
petgraph = { version = "0.7" }
rayon = { version = "1.8" }
rustc-hash = { version = "2.0" }
rustworkx-core = { version = "0.15" }
smallvec = { version = "1.11" }
strum = { version = "0.26", features = ["derive"] }
z3 = { version = "0.12", optional = true }

[features]
default = []
# Only day 24 (part 2) is solved using Z3, so it is optional
z3 = ["dep:z3"]

[lib]
bench = false
