[package]
name = "aoc2024"
description = "Advent of Code 2024"
edition = "2021"
rust-version = "1.82"
version = "0.1.0"
authors.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish = false

[dependencies]
aoc-runner = { workspace = true }
aoc-runner-derive = { workspace = true }
indoc = { workspace = true }

arrayvec = { version = "0.7" }
derive_more = { version = "2", features = ["full"] }
itertools = { version = "0.14" }
nalgebra = { version = "0.33" }
pathfinding = { version = "4.14" }
rayon = { version = "1.8" }
rustc-hash = { version = "2.0" }
smallvec = { version = "1.11" }
strum = { version = "0.26", features = ["derive"] }

[features]
default = []

[lib]
bench = false
